--- a/mlir/lib/Dialect/CMakeLists.txt
+++ b/mlir/lib/Dialect/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(Affine)
 add_subdirectory(AMDGPU)
 add_subdirectory(AMX)
 add_subdirectory(Arith)
+add_subdirectory(Mini)
 add_subdirectory(ArmNeon)
 add_subdirectory(ArmSME)
 add_subdirectory(ArmSVE)
